--- a/app/views/request_update/request_update.html.haml
+++ b/app/views/request_update/request_update.html.haml
@@ -3,25 +3,25 @@
 	%head
 		%meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
 	%body
-		%h1.greeting Hi, #{@name}!
-
-		%p What have you been up to on project #{@project.name}? Just reply to this email to let me know.
-		%p Offbott
+		#container
+			%h1.greeting Hi, #{@name}!
+	
+			%p What have you been up to on project #{@project.name}? Just reply to this email to let me know.
+			%p Offbott
 		
-		%p
-			%a{:href=>"http://offbott.com/projects/#{@project.id}"} Visit the web page for this project
+			%p
+				%a{:href=>"http://offbott.com/projects/#{@project.id}"} Visit the web page for this project
+	
+			- if @project.updates
+	
+				%h3.project_name #{@project.name} - recent updates
 
-		- if @project.updates
-
-			%h3.project_name #{@project.name} - recent updates
-
-			#updates
-				- @project.updates.order("created_at DESC").limit(3).each do |update|
-					.update
-						- body = add_line_breaks(extract_reply(update.body))
-						%p.body= body
-						%p.credit 
-						<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
-						%span.permalink= link_to '∞', update_path(update)
+				#updates
+					- @project.updates.order("created_at DESC").limit(3).each do |update|
+						.update
+							- body = add_line_breaks(extract_reply(update.body))
+							%p.body= body
+							%p.credit 
+								<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime(""%I:%M %p, %A %B %e"")}</span>
 
 
