invitation emails with project creators

--- a/app/views/request_update/request_update.html.haml
+++ b/app/views/request_update/request_update.html.haml
@@ -22,6 +22,6 @@
 							- body = add_line_breaks(extract_reply(update.body))
 							%p.body= body
 							%p.credit 
-								<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime(""%I:%M %p, %A %B %e"")}</span>
+								<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p, %A %B %e")}</span>
 
 
