--- a/app/views/send_invitation/send_out_invite.html.haml
+++ b/app/views/send_invitation/send_out_invite.html.haml
@@ -1,12 +1,30 @@
-%h1 Hi!
+!!!
+%html
+	%head
+		%meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+	%body
+		#container
 
-%p Someone has sent you an invite to Offbott.
+			%h1 Hello!
 
-%p Go to <a href="http://offbott.com">Offbott</a> to register.
+			%p Someone has sent you an invite to <a href="http://offbott.com">Offbott</a>.
+			
+			%p <strong><a href="http://offbott.com">Offbott</a> is a (mostly) friendly robot who helps small teams keep a journal of their projects.</strong> There's more information at <a href="http://offbott.com">Offbott.com/about</a>.
+			
+			- if @projects.count == 1
+				- @controller = Person.find([@projects[0].created_by])
+				%h3 You've been invited to join a project called "#{@projects[0].name}", created by #{@controller[0].name}.
+			- else
+				%h3 You've been invited to several projects:
+				
+				%ul
+					- @projects.each do |proj|
+						- @controller = Person.find([proj.created_by])
+						%li "#{proj.name}", created by #{@controller[0].name}.
 
-%p Thanks!
+			%p To join in, you just need to register with this email at <a href="http://offbott.com">Offbott.com</a>, and follow the instructions.
 
-%p
-	Your friendly
-	%br
-	Offbott
+			%p
+				Yours,
+				%br
+				Offbott
