--- a/app/views/projects/my_index.html.haml
+++ b/app/views/projects/my_index.html.haml
@@ -8,16 +8,25 @@
 			%p <span class="logotype">Offbot</span> doesn't know about any of your projects yet.
 	
 		- else
-		#pop_box
-			#project_list
-				- @projects.each do |project|
-					%p
-						= link_to project.name, project, :title => "Check out this Project"
-						- if project.manageable_by?(current_person)
-							%span.delete= link_to 'Delete', confirm_delete_project_path(project)
-						- if current_person.can_view?(project)
-							%span.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
-						%span.add= link_to 'New Update', :controller => "updates", :action => "new", :project => project
+		#project_list
+			- @projects.each do |project|
+				%p.project_name
+					= link_to project.name, project, :title => "Check out this Project"
+					- if project.manageable_by?(current_person)
+						%span.delete= link_to 'Delete', confirm_delete_project_path(project)
+					- if current_person.can_view?(project)
+						%span.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
+					%span.add= link_to 'New Update', :controller => "updates", :action => "new", :project => project
+				- updateday = project.updates.last.created_at.strftime("%Y-%m-%d")
+				- today = Time.new
+				- yesterday = today - 86400
+				- if updateday == today.strftime("%Y-%m-%d")
+					- daymark = 'today'
+				- elsif updateday == yesterday.strftime("%Y-%m-%d")
+					- daymark = 'yesterday'
+				- else
+					- daymark = 'on ' + project.updates.last.created_at.strftime("%A %d %B")
+				%p.project_note Last update by #{Person.find_by_id(project.updates.last.person_id).name} at #{project.updates.last.created_at.strftime("%I:%M %p")} #{daymark}
 							
 	#project_col_right	
 
