--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -9,7 +9,7 @@
 / add the last 10 weekdays to an array, with the count
 - count = 0
 - @upDateNums = Array.new
-- while count < 20
+- while count < 30
 	- if (1..5).member?(thisday.wday)
 		- @upDateNums << [thisday.strftime("%A %Y-%m-%d"),@project.updates.select {|u| u.created_at.strftime("%Y-%m-%d") == thisday.strftime("%Y-%m-%d") }.size]
 		- count += 1
@@ -17,7 +17,7 @@
 
 %ul#project_sparkline_numbers.hidden
 	- @upDateNums.each do |update|
-		%li= update[1]
+		%li <span class="date">#{update[1]}</span> <span class="num">#{update[1]}</span>
 
 #project_cols
 	
