--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -30,20 +30,20 @@
 					- if @project.people.include?(person)
 						- already_on_the_project << person.name.titleize
 			- if already_on_the_project
-				%p 
-					These people have already joined the project: 
+				%p
+					These people have already joined the project:
 					= already_on_the_project.join(", ")
 		-unless @project.invitations.empty?
-			%p These people have been invited to the project:	
+			%p These people have been invited to the project:
 			%table#new_project_invited
 				- @project.invitations.each do |person|
 					%li <em>#{person.email}</em>
-			
+
 
 	%h3 Invite others to join the project
-			
+
 	%p Add the email addresses of the other people you'd like to be on the project:
-	
+
 	#email_adds
 		.email_add_block
 			%p.address= text_field_tag "emails[]"
@@ -51,8 +51,8 @@
 			%p.address= text_field_tag "emails[]"
 			%p.address= text_field_tag "emails[]"
 			%p.address= text_field_tag "emails[]"
-		%p.right 
-			%span{:id => 'addmoreemails', :class => ['operate', 'button']} + Add more	
+		%p.right
+			%span{:id => 'addmoreemails', :class => ['operate', 'button']} + Add more
 	%table#new_project_update_frequency
 		%tr
 			%td= f.label :frequency, "How frequently would you like Offbott to request updates from your teammates?"
@@ -60,11 +60,11 @@
 				- frequencies = {"0" => "Once a day", "1" => "Twice a week", "2" => "Once a week",  "3" => "Twice a month", "4" => "Once a month"}
 				= select(:project, :frequency, options_for_select(frequencies.map{|frequency,key| [key, frequency]}, @project.frequency))
 
-	%table#new_project_weekly_digest
-		%tr
-			%td= f.label :weekly_digest_day, "On which day would you like to receive the weekly digest of all updates?"
-			%td
-				- weekdays = I18n.t 'date.day_names'
-				= select(:project, :weekly_digest_day, options_for_select(weekdays, @project.weekly_digest_day))
+	- if @project.updates.length > 0
+		%h3 Archive the project?
+		%table#project_archive
+			%tr
+				%td= f.label :archived, "Archived projects don't send out email."
+				%td= f.check_box :archived
 
 	%p= f.submit 'Save this project', :class => 'confirm button'
