tell people they can stop emails being sent

--- a/app/views/request_update/request_update.html.haml
+++ b/app/views/request_update/request_update.html.haml
@@ -5,15 +5,18 @@
 	%body
 		#container
 			%h1.greeting Hi, #{@name}!
-	
+
 			%p What have you been up to on project #{@project.name}? Just reply to this email to let me know.
 			%p Offbott
-		
+
 			%p
 				%a{:href=>"http://offbott.com/projects/#{@project.id}"} Visit the web page for this project
-	
+
+			%p
+				%a{:href=>"http://offbott.com/projects/#{@project.id}/edit"} Don't want Offbott to send emails for this project again? You can now mark projects as archived
+
 			- if @project.updates
-	
+
 				%h3.project_name #{@project.name} - recent updates
 
 				#updates
@@ -21,7 +24,7 @@
 						.update
 							- body = raw(add_line_breaks(extract_reply(update.body)))
 							%p.body= body
-							%p.credit 
+							%p.credit
 								<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p, %A %B %e")}</span>
 
 
