--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -90,4 +90,4 @@
     .link_box
       %p= link_to 'See all your projects', root_url
     #bug_box
-      %p <strong>Found a bug?</strong> <a href="https://github.com/stml/offbot/issues/new">Let us know on github</a> or <a href="mailto:ntalia.buckley@gmail.com?subject=Found a bug in Offbott">via email</a>.
+      %p <strong>Found a bug?</strong> <a href="https://github.com/stml/offbot/issues/new">Let us know on github</a> or <a href="mailto:hi@ntlk.net?subject=Found a bug in Offbott">via email</a>.
