--- a/app/views/send_invitation/send_out_invite.html.haml
+++ b/app/views/send_invitation/send_out_invite.html.haml
@@ -7,9 +7,9 @@
 
       %h1 Hello!
 
-      %p Someone has sent you an invite to <a href="http://offbott.com">Offbott</a>.
+      %p Someone has sent you an invite to <a href="http://offbott.com/?invitation=#{@invite.token}">Offbott</a>.
 
-      %p <strong><a href="http://offbott.com">Offbott</a> is a (mostly) friendly robot who helps small teams keep a journal of their projects.</strong> There's more information at <a href="http://offbott.com">Offbott.com/about</a>.
+      %p <strong><a href="http://offbott.com/?invitation=#{@invite.token}">Offbott</a> is a (mostly) friendly robot who helps small teams keep a journal of their projects.</strong> There's more information at <a href="http://offbott.com">Offbott.com/about</a>.
 
       - if @projects.count == 1
         - @controller = Person.find([@projects[0].created_by])
@@ -22,7 +22,7 @@
             - @controller = Person.find([proj.created_by])
             %li "#{proj.name}", created by #{@controller[0].name}.
 
-      %p To join in, you just need to register with this email at <a href="http://offbott.com">Offbott.com</a>, and follow the instructions.
+      %p To join in, you just need to <a href="http://offbott.com/?invitation=#{@invite.token}">sign up to Offbott.com</a>, and follow the instructions.
 
       %p
         Yours,
