--- a/app/views/send_invitation/send_out_invite.html.haml
+++ b/app/views/send_invitation/send_out_invite.html.haml
@@ -9,7 +9,7 @@
 
       %p Someone has sent you an invite to <a href="http://offbott.com/?invitation=#{@invite.token}">Offbott</a>.
 
-      %p <strong><a href="http://offbott.com/?invitation=#{@invite.token}">Offbott</a> is a (mostly) friendly robot who helps small teams keep a journal of their projects.</strong> There's more information at <a href="http://offbott.com">Offbott.com/about</a>.
+      %p <strong><a href="http://offbott.com/?invitation=#{@invite.token}">Offbott</a> is a (mostly) friendly robot who helps small teams keep a journal of their projects.</strong> There's more information at <a href="http://offbott.com/about?invitation=#{@invite.token}">Offbott.com/about</a>.
 
       - if @projects.count == 1
         - @controller = Person.find([@projects[0].created_by])
